crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__discarded_list_default.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
(case
  [(builtin mkNilData) (con unit ())]
  (lam head_1 (lam tail_2 (con integer 0)))
  (con integer 42))
--- uplc after
(case
  [(builtin mkNilData) (con unit ())]
  (lam head_1 (lam tail_2 (con integer 0)))
  (con integer 42))
--- result
(con integer 42)
--- logs
[]
