crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__lowered_data.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
assertion_line: 45
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs))"
---
--- unoptimized Core
case@Data iData 42 of
  DataI decoded#1 -> trace "integer" in decoded#1
  _ -> error
--- unoptimized UPLC
(program 1.1.0
  [(lam generated_2
    (force
      [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
        (delay (error))]
        (delay
          [(lam decoded_1
            (force [[(force (builtin trace)) (con string "integer")] (delay decoded_1)]))
            [(builtin unIData) generated_2]])]
        (delay (error))]))
    [(builtin iData) (con integer 42)]])
--- optimized Core
let anf#3 : Data = iData 42 in
case@Data anf#3 of
  DataI decoded#2 -> trace "integer" in decoded#2
  _ -> error
--- optimized UPLC
(program 1.1.0
  [(lam builtin_6
    [(lam builtin_7
      [(lam anf_1
        [(lam generated_5
          (force
            [[[[[[builtin_7 generated_5] (delay (error))] (delay (error))] (delay (error))]
              (delay
                [(lam decoded_4 (force [[builtin_6 (con string "integer")] (delay decoded_4)]))
                  [(builtin unIData) generated_5]])]
              (delay (error))]))
          anf_1])
        [(builtin iData) (con integer 42)]])
      (force (builtin chooseData))])
    (force (builtin trace))])
--- isolated pass
--- uplc before
[(lam generated_2
  (force
    [[[[[[(force (builtin chooseData)) generated_2] (delay (error))] (delay (error))]
      (delay (error))]
      (delay
        [(lam decoded_1
          (force [[(force (builtin trace)) (con string "integer")] (delay decoded_1)]))
          [(builtin unIData) generated_2]])]
      (delay (error))]))
  [(builtin iData) (con integer 42)]]
--- uplc after
[(lam builtin_3
  [(lam builtin_4
    [(lam generated_2
      (force
        [[[[[[builtin_4 generated_2] (delay (error))] (delay (error))] (delay (error))]
          (delay
            [(lam decoded_1 (force [[builtin_3 (con string "integer")] (delay decoded_1)]))
              [(builtin unIData) generated_2]])]
          (delay (error))]))
      [(builtin iData) (con integer 42)]])
    (force (builtin chooseData))])
  (force (builtin trace))]
--- result
(con integer 42)
--- logs
["integer"]
