crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__builtin_sharing__polymorphic.snap
---
source: crates/nash-codegen/src/optimizer_tests/builtin_sharing.rs
expression: "format!(\"--- uplc before\\n{}\\n--- uplc after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\nnash_plutus::pretty::term(before), nash_plutus::pretty::term(after),\ncandidate.result, candidate.logs)"
---
--- uplc before
(case
  [[[(force (builtin ifThenElse)) (con bool True)] (con bool True)]
    (con bool False)]
  (con integer 0)
  [[[(force (builtin ifThenElse)) (con bool True)] (con integer 42)]
    (con integer 0)])
--- uplc after
[(lam builtin_1
  (case
    [[[builtin_1 (con bool True)] (con bool True)] (con bool False)]
    (con integer 0)
    [[[builtin_1 (con bool True)] (con integer 42)] (con integer 0)]))
  (force (builtin ifThenElse))]
--- result
(con integer 42)
--- logs
[]
